NOJIRA various findbugs patterns